packages/flark_core/native/comrak_bridge/include/flark_v4.h

typedef uint32_t FlarkV4SessionState;
typedef uint32_t FlarkV4CertificationState;
typedef uint32_t FlarkV4Affinity;
typedef uint64_t FlarkV4SessionHandle;
typedef uint64_t FlarkV4TransactionHandle;
typedef uint64_t FlarkV4AnchorHandle;
typedef uint64_t FlarkV4Revision;
typedef uint64_t FlarkV4ProgressToken;
typedef struct FlarkV4AbiInfo {
  uint32_t struct_size;
  uint16_t abi_major;
  uint16_t abi_minor;
  uint64_t capability_bits;
  uint32_t max_small_edit_bytes;
  uint32_t max_bulk_chunk_bytes;
  uint32_t max_source_chunk_bytes;
  uint32_t max_result_bytes;
  uint32_t max_query_items;
  uint32_t max_transaction_edits;
  uint64_t reserved[3];
} FlarkV4AbiInfo;
typedef struct FlarkV4Outcome {
  uint32_t struct_size;
  uint32_t operation;
  uint32_t status;
  uint32_t progress_state;
  uint64_t primary_handle;
  uint64_t secondary_handle;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t progress_token;
  uint64_t required_bytes;
  uint64_t written_bytes;
  uint64_t detail_code;
  uint64_t reserved[4];
} FlarkV4Outcome;
typedef struct FlarkV4SourceRange {
  uint64_t start_byte;
  uint64_t end_byte;
} FlarkV4SourceRange;
typedef struct FlarkV4CertificationRangeRecord {
  FlarkV4CertificationState certification_state;
  uint32_t reserved;
  FlarkV4SourceRange source_range;
  FlarkV4SourceRange source_utf16_range;
} FlarkV4CertificationRangeRecord;
typedef struct FlarkV4ViewportRowRecord {
  uint64_t ordinal;
  uint32_t kind;
  uint32_t flags;
  uint64_t source_start_byte;
  uint64_t source_end_byte;
  uint64_t source_start_utf16;
  uint64_t source_end_utf16;
  uint64_t editable_start_byte;
  uint64_t editable_end_byte;
  uint64_t editable_start_utf16;
  uint64_t editable_end_utf16;
  uint64_t presentation_prefix_start_byte;
  uint64_t presentation_prefix_end_byte;
  uint64_t presentation_prefix_start_utf16;
  uint64_t presentation_prefix_end_utf16;
  uint32_t path_depth;
  uint32_t semantic_variant;
  uint32_t semantic_value;
  uint32_t inline_fact_count;
} FlarkV4ViewportRowRecord;
typedef struct FlarkV4ProjectionSegmentRecord {
  FlarkV4SourceRange source_range;
  FlarkV4SourceRange source_utf16_range;
} FlarkV4ProjectionSegmentRecord;
typedef struct FlarkV4InlineFactRecord {
  uint32_t kind;
  uint32_t flags;
  uint64_t source_start_byte;
  uint64_t source_end_byte;
  uint64_t source_start_utf16;
  uint64_t source_end_utf16;
  uint64_t content_start_byte;
  uint64_t content_end_byte;
  uint64_t content_start_utf16;
  uint64_t content_end_utf16;
  uint32_t replacement_first;
  uint32_t replacement_second;
} FlarkV4InlineFactRecord;
typedef struct FlarkV4SemanticTargetRecord {
  uint32_t kind;
  uint32_t syntax;
  FlarkV4SourceRange source_range;
  FlarkV4SourceRange source_utf16_range;
  FlarkV4SourceRange content_range;
  FlarkV4SourceRange content_utf16_range;
  FlarkV4SourceRange destination_source_range;
  FlarkV4SourceRange destination_source_utf16_range;
  FlarkV4SourceRange title_source_range;
  FlarkV4SourceRange title_source_utf16_range;
  uint32_t destination_bytes;
  uint32_t title_bytes;
  uint64_t reserved[2];
} FlarkV4SemanticTargetRecord;
typedef struct FlarkV4EditDescriptor {
  uint64_t start_byte;
  uint64_t end_byte;
  uint64_t replacement_offset;
  uint64_t replacement_len;
} FlarkV4EditDescriptor;
typedef struct FlarkV4WorkBudget {
  uint64_t max_work_units;
  uint64_t advisory_max_micros;
  uint32_t max_result_items;
  uint32_t max_result_bytes;
} FlarkV4WorkBudget;
typedef struct FlarkV4SessionRef {
  uint64_t session;
  uint64_t owner_token;
} FlarkV4SessionRef;
typedef struct FlarkV4NegotiateRequest {
  uint32_t struct_size;
  uint16_t requested_major;
  uint16_t requested_minor;
  uint64_t required_capability_bits;
} FlarkV4NegotiateRequest;
typedef struct FlarkV4SessionConfig {
  uint32_t struct_size;
  uint32_t parser_profile;
  uint64_t history_budget_bytes;
  uint64_t max_document_bytes;
  uint64_t flags;
  uint64_t reserved[4];
} FlarkV4SessionConfig;
typedef struct FlarkV4CreateRequest {
  uint32_t struct_size;
  uint32_t flags;
  uint64_t owner_token;
  uint64_t expected_total_bytes;
  FlarkV4SessionConfig config;
} FlarkV4CreateRequest;
typedef struct FlarkV4StageRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t transaction;
  uint64_t chunk_offset;
  uint64_t chunk_len;
  uint64_t reserved[2];
} FlarkV4StageRequest;
typedef struct FlarkV4SourceReadRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t revision;
  FlarkV4SourceRange range;
  uint64_t reserved[2];
} FlarkV4SourceReadRequest;
typedef struct FlarkV4SmallEditRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  uint32_t edit_count;
  uint32_t reserved_u32;
  uint64_t replacement_bytes_len;
  FlarkV4WorkBudget budget;
  uint64_t reserved[2];
} FlarkV4SmallEditRequest;
typedef struct FlarkV4EditIntentRequestV1 {
  uint32_t struct_size;
  uint32_t profile_id;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  FlarkV4AnchorHandle selection_base_anchor;
  FlarkV4AnchorHandle selection_extent_anchor;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  uint64_t acknowledge_previous_logical_edit_id;
  uint64_t selection_generation;
  uint32_t intent;
  uint32_t selection_affinity;
  uint32_t selection_direction;
  uint32_t composition_active;
  FlarkV4WorkBudget budget;
  FlarkV4AnchorHandle target_anchor;
} FlarkV4EditIntentRequestV1;
typedef struct FlarkV4SourceTransactionRequestV1 {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  FlarkV4Revision expected_revision;
  FlarkV4AnchorHandle selection_base_anchor;
  FlarkV4AnchorHandle selection_extent_anchor;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  uint64_t acknowledge_previous_logical_edit_id;
  uint64_t selection_generation;
  FlarkV4SourceRange base_utf16_range;
  uint64_t result_selection_base_utf16;
  uint64_t result_selection_extent_utf16;
  FlarkV4Affinity selection_affinity;
  uint32_t selection_direction;
  uint64_t replacement_bytes_len;
  FlarkV4WorkBudget budget;
  uint64_t history_group_id;
} FlarkV4SourceTransactionRequestV1;
typedef struct FlarkV4StagedSourceTransactionRequestV1 {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  FlarkV4TransactionHandle transaction;
  FlarkV4Revision expected_revision;
  FlarkV4ProgressToken progress_token;
  FlarkV4AnchorHandle selection_base_anchor;
  FlarkV4AnchorHandle selection_extent_anchor;
  uint64_t logical_edit_id;
  uint64_t request_digest;
  uint64_t acknowledge_previous_logical_edit_id;
  uint64_t selection_generation;
  uint64_t result_selection_utf16;
  FlarkV4Affinity selection_affinity;
  uint32_t selection_direction;
  FlarkV4WorkBudget budget;
  uint64_t history_group_id;
  uint64_t reserved[2];
} FlarkV4StagedSourceTransactionRequestV1;
typedef struct FlarkV4BulkBeginRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  FlarkV4SourceRange range;
  uint64_t expected_total_bytes;
  uint64_t reserved[2];
} FlarkV4BulkBeginRequest;
typedef struct FlarkV4TransactionRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t transaction;
  uint64_t expected_revision;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4TransactionRequest;
typedef struct FlarkV4PumpRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
} FlarkV4PumpRequest;
typedef struct FlarkV4QueryRequest {
  uint32_t struct_size;
  uint32_t query_kind;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  FlarkV4SourceRange range;
  uint64_t continuation;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4QueryRequest;
typedef struct FlarkV4ContinuationRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t continuation;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4ContinuationRequest;
typedef struct FlarkV4AnchorRequest {
  uint32_t struct_size;
  uint32_t coordinate_kind;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t anchor;
  uint64_t position;
  uint32_t affinity;
  uint32_t reserved_u32;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
} FlarkV4AnchorRequest;
typedef struct FlarkV4CoordinateRequest {
  uint32_t struct_size;
  uint32_t from_kind;
  uint32_t to_kind;
  uint32_t reserved_u32;
  FlarkV4SessionRef session;
  uint64_t revision;
  uint64_t snapshot;
  uint64_t position;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4CoordinateRequest;
typedef struct FlarkV4HistoryRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t expected_revision;
  uint64_t history_token;
  FlarkV4ProgressToken progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4HistoryRequest;
typedef struct FlarkV4CancelRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t progress_token;
  uint64_t reserved[4];
} FlarkV4CancelRequest;
typedef struct FlarkV4CloseRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t progress_token;
  FlarkV4WorkBudget budget;
  uint64_t reserved[1];
} FlarkV4CloseRequest;
typedef struct FlarkV4OwnerTransferRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t new_owner_token;
  uint64_t reserved[4];
} FlarkV4OwnerTransferRequest;
typedef struct FlarkV4InspectRequest {
  uint32_t struct_size;
  uint32_t flags;
  FlarkV4SessionRef session;
  uint64_t reserved[5];
} FlarkV4InspectRequest;
typedef struct FlarkV4SessionInspection {
  uint32_t struct_size;
  FlarkV4SessionState session_state;
  FlarkV4SessionHandle session;
  FlarkV4Revision revision;
  uint32_t live_transactions;
  uint32_t live_continuations;
  uint32_t live_anchors;
  uint32_t live_history_tokens;
  uint64_t reserved[3];
} FlarkV4SessionInspection;