packages/flark_core/lib/src/native/bindings.dart


  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4CertificationRangeRecord extends Struct {
  @Uint32()
  external int certificationState;

  @Uint32()
  external int reserved;

  external FlarkV4SourceRange sourceRange;
  external FlarkV4SourceRange sourceUtf16Range;
}

final class FlarkV4ViewportRowRecord extends Struct {
  @Uint64()
  external int ordinal;

  @Uint32()
  external int kind;

  @Uint32()
  external int flags;

  @Uint64()
  external int sourceStartByte;

  @Uint64()
  external int sourceEndByte;

  @Uint64()
  external int sourceStartUtf16;

  @Uint64()
  external int sourceEndUtf16;

  @Uint64()
  external int editableStartByte;

  @Uint64()
  external int editableEndByte;

  @Uint64()
  external int editableStartUtf16;

  @Uint64()
  external int editableEndUtf16;

  @Uint64()
  external int presentationPrefixStartByte;

  @Uint64()
  external int presentationPrefixEndByte;

  @Uint64()
  external int presentationPrefixStartUtf16;

  @Uint64()
  external int presentationPrefixEndUtf16;

  @Uint32()
  external int pathDepth;

  @Uint32()
  external int semanticVariant;

  @Uint32()
  external int semanticValue;

  @Uint32()
  external int inlineFactCount;
}

final class FlarkV4ProjectionSegmentRecord extends Struct {
  external FlarkV4SourceRange sourceRange;

  external FlarkV4SourceRange sourceUtf16Range;
}

final class FlarkV4InlineFactRecord extends Struct {
  @Uint32()
  external int kind;

  @Uint32()
  external int flags;

  @Uint64()
  external int sourceStartByte;

  @Uint64()
  external int sourceEndByte;

  @Uint64()
  external int sourceStartUtf16;

  @Uint64()
  external int sourceEndUtf16;

  @Uint64()
  external int contentStartByte;

  @Uint64()
  external int contentEndByte;

  @Uint64()
  external int contentStartUtf16;

  @Uint64()
  external int contentEndUtf16;

  @Uint32()
  external int replacementFirst;

  @Uint32()
  external int replacementSecond;
}

final class FlarkV4SemanticTargetRecord extends Struct {
  @Uint32()
  external int kind;

  @Uint32()
  external int syntax;

  external FlarkV4SourceRange sourceRange;
  external FlarkV4SourceRange sourceUtf16Range;
  external FlarkV4SourceRange contentRange;
  external FlarkV4SourceRange contentUtf16Range;
  external FlarkV4SourceRange destinationSourceRange;
  external FlarkV4SourceRange destinationSourceUtf16Range;
  external FlarkV4SourceRange titleSourceRange;
  external FlarkV4SourceRange titleSourceUtf16Range;

  @Uint32()
  external int destinationBytes;

  @Uint32()
  external int titleBytes;

  @Array(2)
  external Array<Uint64> reserved;
}

final class FlarkV4AnchorRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int coordinateKind;

  external FlarkV4SessionRef session;

  @Uint64()
  external int revision;

  @Uint64()
  external int snapshot;

  @Uint64()
  external int anchor;

  @Uint64()
  external int position;

  @Uint32()
  external int affinity;

  @Uint32()
  external int reservedU32;

  @Uint64()
  external int progressToken;

  external FlarkV4WorkBudget budget;
}

final class FlarkV4CancelRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int progressToken;

  @Array(4)
  external Array<Uint64> reserved;
}

final class FlarkV4OwnerTransferRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Uint64()
  external int newOwnerToken;

  @Array(4)
  external Array<Uint64> reserved;
}

final class FlarkV4InspectRequest extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int flags;

  external FlarkV4SessionRef session;

  @Array(5)
  external Array<Uint64> reserved;
}

final class FlarkV4SessionInspection extends Struct {
  @Uint32()
  external int structSize;

  @Uint32()
  external int sessionState;

  @Uint64()
  external int session;

  @Uint64()
  external int revision;

  @Uint32()
  external int liveTransactions;

  @Uint32()
  external int liveContinuations;

  @Uint32()
  external int liveAnchors;

  @Uint32()
  external int liveHistoryTokens;

  @Array(3)
  external Array<Uint64> reserved;
}

typedef _CreateBeginNative =
    Uint32 Function(
      Pointer<FlarkV4CreateRequest>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef CreateBeginDart =
    int Function(
      Pointer<FlarkV4CreateRequest>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _CreateAppendNative =
    Uint32 Function(
      Pointer<FlarkV4StageRequest>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef CreateAppendDart =
    int Function(
      Pointer<FlarkV4StageRequest>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _CreateCommitNative =
    Uint32 Function(
      Pointer<FlarkV4TransactionRequest>,
      Pointer<FlarkV4Outcome>,
    );
typedef CreateCommitDart =
    int Function(Pointer<FlarkV4TransactionRequest>, Pointer<FlarkV4Outcome>);

typedef _PumpNative =
    Uint32 Function(Pointer<FlarkV4PumpRequest>, Pointer<FlarkV4Outcome>);
typedef PumpDart =
    int Function(Pointer<FlarkV4PumpRequest>, Pointer<FlarkV4Outcome>);

typedef _SmallEditNative =
    Uint32 Function(
      Pointer<FlarkV4SmallEditRequest>,
      Pointer<FlarkV4EditDescriptor>,
      Uint32,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef SmallEditDart =
    int Function(
      Pointer<FlarkV4SmallEditRequest>,
      Pointer<FlarkV4EditDescriptor>,
      int,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _EditIntentV1Native =
    Uint32 Function(
      Pointer<FlarkV4EditIntentRequestV1>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef EditIntentV1Dart =
    int Function(
      Pointer<FlarkV4EditIntentRequestV1>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _SourceTransactionV1Native =
    Uint32 Function(
      Pointer<FlarkV4SourceTransactionRequestV1>,
      Pointer<Uint8>,
      Uint64,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef SourceTransactionV1Dart =
    int Function(
      Pointer<FlarkV4SourceTransactionRequestV1>,
      Pointer<Uint8>,
      int,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _StagedSourceTransactionV1Native =
    Uint32 Function(
      Pointer<FlarkV4StagedSourceTransactionRequestV1>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef StagedSourceTransactionV1Dart =
    int Function(
      Pointer<FlarkV4StagedSourceTransactionRequestV1>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _BulkBeginNative =
    Uint32 Function(Pointer<FlarkV4BulkBeginRequest>, Pointer<FlarkV4Outcome>);
typedef BulkBeginDart =
    int Function(Pointer<FlarkV4BulkBeginRequest>, Pointer<FlarkV4Outcome>);

typedef _BulkAppendNative =
    Uint32 Function(
      Pointer<FlarkV4StageRequest>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef BulkAppendDart =
    int Function(
      Pointer<FlarkV4StageRequest>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _BulkTransactionNative =
    Uint32 Function(
      Pointer<FlarkV4TransactionRequest>,
      Pointer<FlarkV4Outcome>,
    );
typedef BulkTransactionDart =
    int Function(Pointer<FlarkV4TransactionRequest>, Pointer<FlarkV4Outcome>);

typedef _CoordinateConvertNative =
    Uint32 Function(Pointer<FlarkV4CoordinateRequest>, Pointer<FlarkV4Outcome>);
typedef CoordinateConvertDart =
    int Function(Pointer<FlarkV4CoordinateRequest>, Pointer<FlarkV4Outcome>);

typedef _HistoryNative =
    Uint32 Function(Pointer<FlarkV4HistoryRequest>, Pointer<FlarkV4Outcome>);
typedef HistoryDart =
    int Function(Pointer<FlarkV4HistoryRequest>, Pointer<FlarkV4Outcome>);

typedef _SourceReadNative =
    Uint32 Function(
      Pointer<FlarkV4SourceReadRequest>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef SourceReadDart =
    int Function(
      Pointer<FlarkV4SourceReadRequest>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _QueryViewportNative =
    Uint32 Function(
      Pointer<FlarkV4QueryRequest>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef QueryViewportDart =
    int Function(
      Pointer<FlarkV4QueryRequest>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _ContinuationNextNative =
    Uint32 Function(
      Pointer<FlarkV4ContinuationRequest>,
      Pointer<Uint8>,
      Uint64,
      Pointer<FlarkV4Outcome>,
    );
typedef ContinuationNextDart =
    int Function(
      Pointer<FlarkV4ContinuationRequest>,
      Pointer<Uint8>,
      int,
      Pointer<FlarkV4Outcome>,
    );

typedef _ContinuationReleaseNative =
    Uint32 Function(
      Pointer<FlarkV4ContinuationRequest>,
      Pointer<FlarkV4Outcome>,
    );
typedef ContinuationReleaseDart =
    int Function(Pointer<FlarkV4ContinuationRequest>, Pointer<FlarkV4Outcome>);

typedef _CloseNative =
    Uint32 Function(Pointer<FlarkV4CloseRequest>, Pointer<FlarkV4Outcome>);
typedef CloseDart =
    int Function(Pointer<FlarkV4CloseRequest>, Pointer<FlarkV4Outcome>);

typedef _AnchorNative =
    Uint32 Function(Pointer<FlarkV4AnchorRequest>, Pointer<FlarkV4Outcome>);
typedef AnchorDart =
    int Function(Pointer<FlarkV4AnchorRequest>, Pointer<FlarkV4Outcome>);

typedef _CancelNative =
    Uint32 Function(Pointer<FlarkV4CancelRequest>, Pointer<FlarkV4Outcome>);
typedef CancelDart =
    int Function(Pointer<FlarkV4CancelRequest>, Pointer<FlarkV4Outcome>);

typedef _OwnerTransferNative =
    Uint32 Function(
      Pointer<FlarkV4OwnerTransferRequest>,
      Pointer<FlarkV4Outcome>,
    );
typedef OwnerTransferDart =
    int Function(Pointer<FlarkV4OwnerTransferRequest>, Pointer<FlarkV4Outcome>);

typedef _SessionInspectNative =
    Uint32 Function(
      Pointer<FlarkV4InspectRequest>,
      Pointer<FlarkV4SessionInspection>,
      Pointer<FlarkV4Outcome>,
    );
typedef SessionInspectDart =
    int Function(
      Pointer<FlarkV4InspectRequest>,
      Pointer<FlarkV4SessionInspection>,
      Pointer<FlarkV4Outcome>,
    );

typedef _NegotiateNative =
    Uint32 Function(
      Pointer<FlarkV4NegotiateRequest>,
      Pointer<FlarkV4AbiInfo>,
      Pointer<FlarkV4Outcome>,
    );
typedef NegotiateDart =
    int Function(
      Pointer<FlarkV4NegotiateRequest>,
      Pointer<FlarkV4AbiInfo>,
      Pointer<FlarkV4Outcome>,
    );
